version/0.4/_sources/api/ansys/scade/apitools/create/declaration/add_operator_inputs.rst.txt
.. py:function:: add_operator_inputs(operator, vars, insert_before)

   
   Add inputs to an operator.


   :Parameters:

       **operator** : :obj:`suite.Operator`
           Input operator.

       **vars** : :obj:`List`\[:obj:`Tuple`\[:class:`python:str`, :obj:`TX`]]
           Name/type expression trees.

       **insert_before** : :obj:`suite.LocalVariable`
           Insertion point of the inputs. When this parameter is not ``None``, it is
           an existing input of the operator. The inputs are inserted before this input.
           Otherwise, the inputs are added at the end.

   :Returns:

       :obj:`List`\[:obj:`suite.LocalVariable`]
           List of added inputs.








   .. rubric:: Notes

   This is an interface change with respect to the *SCADE Creation Library*.
   The pairs "name"/"type" tree are now embedded in a list of tuples.





   ..
       !! processed by numpydoc !!
